<?xml version="1.0"?>
<package format="2">
  <name>calibration_marker</name>
  <version>0.0.0</version>
  <description>
    Use an RViz interactive marker to generate roslaunch static transform publisher tags.
    The code for the tag will be printed to the console, so you can incorporate it into a
    launch file.

    This package was designed for a quick-and-dirty calibration technique.
  </description>

  <maintainer email="allevato@utexas.edu">Adam Allevato</maintainer>
  <license>BSD 3-clause</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>

  <export>
  </export>
</package>
